tests/fixtures/fail/vec_append_self_borrow.sc
let Vec = std.vec.Vec

let main(): i32 = {
  let mut values: Vec(i32) = Vec(i32).new()
  values.push(42)
  values.append(values)
  0
}
